No more old currencies